# grammar-finetune

./: .gitignore  README.md  analyze_sequence_lengths.py  create-dataset-for-mlx.py  create-dataset.sh  gemma3-270m.py  gemma3-finetune.py  gemma3_finetune.py  gemma3n-4b-conversational.py  hyperparam_tuning.py  metrics.py  mlflow_environment  pyproject.toml  setup_environment
config/: datasets.txt  error_insertion_config.yaml  gemma3_12b_config.yaml  gemma3_270m_config.yaml  gemma3_4b_config.yaml  gemma3_4b_tuning_config.yaml  prompt.txt
data/: README.md  books-to-dataset.py  epub-to-clean-md.py  insert_synthetic_errors.py  merge-all-datasets.py  subsample-dataset.py  test_synthetic_errors.py
src/: __init__.py
src/training/: __init__.py  callbacks.py  core.py  metrics.py  types.py
tools/: README.md  convert_to_ollama.py  evaluate_inference.py
