[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ebooklib>=0.19",
    "html-to-markdown>=1.9.0",
    "lxml>=6.0.1",
    "markdown>=3.8.2",
    "ruff>=0.12.11",
    "tqdm>=4.67.1",
    "zstandard>=0.24.0",
]
