[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ebooklib>=0.19",
    "html-to-markdown>=1.9.0",
    "huggingface-hub>=0.34.4",
    "lxml>=6.0.1",
    "markdown>=3.8.2",
    "mlx>=0.29.0",
    "mlx-lm>=0.27.0",
    "numpy>=2.3.2",
    "pip>=25.2",
    "ruff>=0.12.11",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "zstandard>=0.24.0",
]
