[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate==1.10.1",
    "bitsandbytes==0.47.0",
    "datasets>=3.6.0",
    "ebooklib>=0.19",
    "hf-transfer>=0.1.9",
    "html-to-markdown>=1.10.0",
    "huggingface-hub>=0.34.4",
    "ipython>=9.5.0",
    "librosa>=0.11.0",
    "peft==0.17.1",
    "pip>=25.2",
    "spacy>=3.8.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "timm>=1.0.19",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.55.2",
    "triton==3.3.1",
    "trl==0.22.2",
    "unsloth==2025.9.2",
    "unsloth-zoo==2025.9.3",
    "vllm==0.10.1.1",
    "xformers==0.0.31",
    "zstandard>=0.23.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
